# quick-habit

./: .dockerignore  .env.example  .flake8  Dockerfile  README.md  compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: celery.py  settings.py  urls.py
habits/: admin.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_remove_habit_habits_habi_user_id_599ecd_idx_and_more.py  0004_alter_habit_time.py  0005_habitnotification.py  0006_alter_habit_options.py  0007_alter_habit_options_alter_habit_execution_time_and_more.py
users/: admin.py  managers.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
